tests/codegen/fail/union/enum_same_type_ugly.stderr
error[E0119]: conflicting implementations of trait `MutuallyExclusive` for type `std::string::String`
 --> fail/union/enum_same_type_ugly.rs:3:10
  |
3 | #[derive(GraphQLUnion)]
  |          ^^^^^^^^^^^^
  |          |
  |          first implementation here
  |          conflicting implementation for `std::string::String`
  |
  = note: this error originates in the macro `::juniper::sa::assert_type_ne_all` which comes from the expansion of the derive macro `GraphQLUnion` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::string::String: GraphQLObject<__S>` is not satisfied
 --> fail/union/enum_same_type_ugly.rs:5:7
  |
5 |     A(std::string::String),
  |       ^^^^^^^^^^^^^^^^^^^ the trait `GraphQLObject<__S>` is not implemented for `std::string::String`
  |
help: the trait `GraphQLObject<__S>` is implemented for `EnumValue`
 --> $WORKSPACE/juniper/src/schema/schema.rs
  |
  | #[graphql_object]
  | ^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::string::String: GraphQLObject<__S>` is not satisfied
 --> fail/union/enum_same_type_ugly.rs:6:7
  |
6 |     B(String),
  |       ^^^^^^ the trait `GraphQLObject<__S>` is not implemented for `std::string::String`
  |
help: the trait `GraphQLObject<__S>` is implemented for `EnumValue`
 --> $WORKSPACE/juniper/src/schema/schema.rs
  |
  | #[graphql_object]
  | ^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)
